--- a/index.html
+++ b/index.html
@@ -11,6 +11,78 @@
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
-</body>
+  <div class="container">
+
+    <header>
+      <nav>
+        <a href="services.html">Services</a>
+        <a href="#">Product</a>
+        <a href="#">Vision</a>
+        <a href="#">Features</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+      </nav>
+      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+    </header>
+
+    <section class="intro">
+      <div class="left-intro">
+        <h1>
+          <p>Innovation</p>
+          <p>On</p>
+          <p>Demand</p>
+        </h1>
+        <button>Get Started</button>
+      </div>
+      <div class="right-intro">
+        <img src="img/header-img.png" alt="Image of a code snippet.">
+      </div>
+    </section>
+
+    <hr>
+
+    <section class="top-content">
+      <div class="features">
+        <h3>Features</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      <div class="about">
+        <h3>About</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    </section>
+
+    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+
+    <section class="bottom-content">
+      <div class="services">
+        <h3>Services</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      <div class="product">
+        <h3>Product</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+      <div class="vision">
+        <h3>Vision</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </div>
+    </section>
+
+    <hr>
+
+    <section>
+      <div>
+        <h3>Contact</h3>
+        <p>123 Way 456 Street</p>
+        <p>Somewhere, USA</p><br>
+        <p>1 (888) 888-8888</p><br>
+        <p>sales@greatidea.io</p><br>
+      </div>
+      <div class="copyright">
+        <p>Copyright Great Idea! 2018</p>
+      </div>
+    </section>
+
+  </div>
 </html>
