--- a/index.html
+++ b/index.html
@@ -3,87 +3,86 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Great Idea - Responsive I</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <title>Sprint Challenge - Home</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
 
 </head>
 
 <body>
-  <div class="container">
+    <div class="container">
 
-    <header>
-      <nav>
-        <a href="services.html">Services</a>
-        <a href="#">Product</a>
-        <a href="#">Vision</a>
-        <a href="#">Features</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-      </nav>
-      <img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
-    </header>
+        <header>
+            <img class="logo" src="img/lambda-black.png" alt="Lambda Logo">
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Content</a>
+            </nav>
+        </header>
 
-    <section class="intro">
-      <div class="left-intro">
-        <h1>
-          <p>Innovation</p>
-          <p>On</p>
-          <p>Demand</p>
-        </h1>
-        <button>Get Started</button>
-      </div>
-      <div class="right-intro">
-        <img src="img/header-img.png" alt="Image of a code snippet.">
-      </div>
-    </section>
+        <img class="top-image" src="img/jumbo.jpg" alt="Time lapse photo of cars on a highway">
 
-    <hr>
+        <section class="top-content">
+            <div class="text-container">
+                <h2>The Future</h2>
+                <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
+            </div>
+            <div class="text-container">
+                <h2>The Past</h2>
+                <p>Proin sed quam sed tellus vestibulum ultrices quis in nunc. Phasellus id dui id tortor tincidunt efficitur. Proin faucibus imperdiet erat, non varius lacus. Maecenas non nisl id turpis egestas tincidunt. Nam condimentum venenatis magna eget finibus.</p>
+            </div>
+        </section>
 
-    <section class="top-content">
-      <div class="features">
-        <h3>Features</h2>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-      </div>
-      <div class="about">
-        <h3>About</h2>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-      </div>
-    </section>
+        <section class="middle-content">
 
-    <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+            <h2>Why Did It Have To Be Boxes...</h2>
 
-    <section class="bottom-content">
-      <div class="services">
-        <h3>Services</h2>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-      </div>
-      <div class="product">
-        <h3>Product</h2>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-      </div>
-      <div class="vision">
-        <h3>Vision</h2>
-        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi. Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
-      </div>
-    </section>
+            <div class="boxes">
+                <div class="box box1">Box 1</div>
+                <div class="box box2">Box 2</div>
+                <div class="box box3">Box 3</div>
+                <div class="box box4">Box 4</div>
+                <div class="box box5">Box 5</div>
+                <div class="box box6">Box 6</div>
+                <div class="box box7">Box 7</div>
+                <div class="box box8">Box 8</div>
+                <div class="box box9">Box 9</div>
+                <div class="box box10">Box 10</div>
+            </div>
 
-    <hr>
+        </section>
 
-    <section>
-      <div>
-        <h3>Contact</h3>
-        <p>123 Way 456 Street</p>
-        <p>Somewhere, USA</p><br>
-        <p>1 (888) 888-8888</p><br>
-        <p>sales@greatidea.io</p><br>
-      </div>
-      <div class="copyright">
-        <p>Copyright Great Idea! 2018</p>
-      </div>
-    </section>
+        <section class="bottom-content">
 
-  </div>
+            <div class="text-container">
+                <h2>That's</h2>
+                <p>Phasellus id dui id tortor tincidunt efficitur. Proin sed quam sed tellus vestibulum ultrices quis in nunc.</p>
+            </div>
+            <div class="text-container">
+                <h2>No</h2>
+                <p>Phasellus id dui id tortor tincidunt efficitur. Proin sed quam sed tellus vestibulum ultrices quis in nunc.</p>
+            </div>
+            <div class="text-container">
+                <h2>Moon</h2>
+                <p>Phasellus id dui id tortor tincidunt efficitur. Proin sed quam sed tellus vestibulum ultrices quis in nunc.</p>
+            </div>
+
+        </section>
+
+        <footer>
+            <nav>
+                <a href="#">Home</a>
+                <a href="#">About</a>
+                <a href="#">Products</a>
+                <a href="#">Blog</a>
+                <a href="#">Contact</a>
+            </nav>
+        </footer>
+    </div><!-- container -->
+</body>
 </html>
