WIP: tablet view for section .intro complete and section .top-content in progress

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <button>Get Started</button>
         </div>
         <div class="right-intro">
-          <img src="img/header-img.png" alt="Image of a code snippet.">
+          <img class="code" src="img/header-img.png" alt="Image of a code snippet.">
         </div>
       </section>
 
